--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -6,20 +6,28 @@
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        
+       <a class="navbar-brand" href="index.html">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
+               Menu
             <i class="fas fa-bars"></i>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ url_for('home') }}">Home</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Sample Post</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                {% if user %}
+                <li class="nav-item"><a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('home') }}">{{ user }}</a></li>
                 <form _ngcontent-heh-c48="" class="form-inline ml-lg-2">
                     <a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('create') }}">New Post</a>
                 </form>
+                <li class="nav-item"><a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('logout') }}">logout</a></li>
+                {% endif %}
+                <li class="nav-item"><a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('home') }}">Home</a></li>
+                {% if not user %}
+                <li class="nav-item"><a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('login') }}">login</a></li>
+                <li class="nav-item"><a _ngcontent-heh-c48="" routerlink="/new" class="btn btn-primary" href="{{ url_for('signup') }}">signup</a></li>
+                {% endif %}
+                
             </ul>
         </div>
     </div>
@@ -35,7 +43,9 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
                         <h1>Simple Blog</h1>
-                        <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                        <span class="subheading">Welcome to Blog</span>
+                        <a class="" href="index.html">registered users : </a><ul id="count"></ul></a>
+                        
                     </div>
                 </div>
             </div>
@@ -49,22 +59,11 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <!-- Post preview-->
-                <div class="post-preview">
-                    <a href="post.html">
-                        <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                        <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                    </a>
-                    <p class="post-meta">
-                        Posted by
-                        <a href="#!">Start Bootstrap</a>
-                        on September 24, 2023
-                    </p>
-                </div>
                 <!-- Divider-->
                 <hr class="my-4" />
                 <div class="post-preview">
                     {% for article in content %}
-                        <a href="post.html">
+                        <a href="{{ url_for('article_detail', slug=article.slug) }}">
                             <h2 class="post-title">{{ article.title }}</h2>
                             <h3 class="post-subtitle">{{ article.text }}</h3>
                         </a>
@@ -73,13 +72,21 @@
                             <a href="#!">{{ article.author }}</a>
                             on September 24, 2023
                         </p>
+                        <!-- Divider-->
+                    <hr class="my-4" />
                     {% endfor %}
                 </div>
-                <!-- Divider-->
-                <hr class="my-4" />
                 <!-- Pager-->
                 <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
             </div>
         </div>
-    </div>          
+    </div>    
+          
 {% endblock %}
+<script src="static/js/count.js"></script>
+<style>
+    .navbar-brand {
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
